--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.2.0",
+    "@prisma/client": "^5.9.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.1",
-    
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.33",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.4.1"
   }
 }
