--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.2.0",
+    "@google-cloud/dialogflow": "^6.3.1",
     "@prisma/client": "^5.9.1",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
