--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@auth/prisma-adapter": "^1.2.0",
     "@google-cloud/dialogflow": "^6.3.1",
     "@prisma/client": "^5.9.1",
+    "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "python-shell": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-simple-typewriter": "^5.0.1",
